<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MondeEtat">


    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="650dp"
            android:id="@+id/ViewImage"
            android:background="@drawable/entrance"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454" app:layout_constraintBottom_toTopOf="@+id/bouton_start"/>

    <Button
            android:id="@+id/Continuer"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="640dp"
            android:background="#FFA500"
            android:text="@string/CONTINUER"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:orientation="vertical"
            android:layout_marginTop="160dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintHorizontal_bias="0.0">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Latitude"
                android:textColor="#DC143C"/>

        <TextView
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#DC143C"
                android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:orientation="vertical"
            android:layout_marginTop="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintHorizontal_bias="0.0">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#DC143C"
                android:text="@string/Longtitude"/>

        <TextView
                android:id="@+id/longtitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#DC143C"
                android:layout_weight="1"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:orientation="vertical"
            android:layout_marginTop="240dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintHorizontal_bias="1.0">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#DC143C"
                android:text="@string/Temp"/>

        <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#DC143C"
                android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:orientation="vertical"
            android:layout_marginTop="320dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintHorizontal_bias="0.0">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#DC143C"
                android:text="@string/Description_weather"/>
        <TextView
                android:id="@+id/description_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#DC143C"
                android:layout_weight="1"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:orientation="vertical"
            android:layout_marginTop="280dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintHorizontal_bias="1.0">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#DC143C"
                android:text="@string/Vitesse_vent"/>
        <TextView
                android:id="@+id/vitesse_vent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#DC143C"
                android:layout_weight="1"
        />
    </LinearLayout>
    <TextView
            android:id="@+id/result"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:textColor="#DC143C"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="552dp" app:layout_constraintHorizontal_bias="0.495"/>

</androidx.constraintlayout.widget.ConstraintLayout>